# haskellbook

./: README.md  chapterEight.hs  chapterEleven.hs  chapterFive.hs  chapterSeven.hs  chapterSix.hs  chapterTen.hs  chapterThree.hs  chapterTwelve.hs  wordnumber.hs
chapterEighteen/: chapter_exercises.hs  misc_exercises.hs  short_exercises.hs
chapterEleven/: binaryTree.hs  chapterEleven.hs
chapterFifteen/: chapterFifteen.hs  semigroup_exercises.hs
chapterFourteen/: addition.cabal
chapterFourteen/app/: Main.hs  addition.hs
chapterFourteen/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  (+2 more)
chapterFourteen/morse/: LICENSE  morse.cabal
chapterFourteen/morse/app/: Main.hs
chapterFourteen/morse/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapterFourteen/morse/dist-newstyle/packagedb/ghc-9.4.8/: morse-0.1.0.0-inplace.conf  package.cache
chapterFourteen/morse/src/: Main.hs  Morse.hs
chapterFourteen/morse/test/: ChapterExercises.hs  Main.hs
chapterSeventeen/: bad_monoid.hs  chapterExercises.hs  list.hs  short_exercises.hs  validation.hs
chapterSixteen/: functor_exercises.hs
chapterTwenty/: chapter_exercises.hs  short_exercises.hs
chapterTwentyFive/: bifunctor_exercises.hs  compose_exercises.hs
chapterTwentyOne/: chapter_exercises.hs
chapterTwentySix/: chapter_exercises.hs  transformer_exercises.hs
chapterTwentyThree/: dice_game.hs  state_exercises.hs
chapterTwentyTwo/: reader_exercise.hs  reader_practice.hs  short_exercise.hs
