cabal-version:      3.0
name:               morse
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Darius Liddell
maintainer:         darius@carerev.com
-- copyright:
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Morse
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, containers, QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

executable morse
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        morse,
        containers,
        QuickCheck

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite morse-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        morse,
        containers,
        QuickCheck
